﻿[B]Changelog[/B]
Fixed: SVT changed their Live channel format (Fixes #708)

[I]Previous changes[/I]
Fixed: TV4play.se Live stream did not work (Fixed 697)
Fixed: UR Play website was update which broke Retrospect (Fixes #691)
Added: SVT and Oppet Arkiv Search (Fixes #681)
Fixed: Swedish Kanal 5/9/11 updated their API and broke the channels (Fixes #679)
Fixed: TV4Play added more subtitle streams that where interpreted as video (Fixes #676)
Fixed: Swedish SBS channel change video content platform and broke Kanal 5, Kanal 9 and Kanal 11 (Fixes #673)
Fixed: SVT Categories would mix up videos and folders (Fixes #652)
Added: TV12 and TV7 via TV4Play (Fixes #631)
Fixed: TV4Play had some broken lists (Fixes #629)
Added: TV4Play Live channel (Fixes #626)
Fixed: URL encode the categorie names for TV4Play (See #519)
Fixed: SVT Öppet Arkiv again (Fixes #622)
Fixed: SVT Oppet Arkiv (Fixes #621)
Updated: TV4Play added more categories (Fixes #519)
Added: TV4Play has a DRM protection indicator for Premium indication (See #620)
Added: Senaste avsnitten/clip to Kanal5.se, Kanal9.se and Kanal11.se (See #519)Added: Categories for SVT.se (Fixes #614)
Fixed: URPlay updated their JSON format (Fixes #607)
Added: 'Mest spelade', 'Mest delade', 'Senaste' and 'Sista chansen' to URPlay (Fixed #608)
Fixed: SVT would not show videos (Fixes #599)
Fixed: SVT Regex missed some episodes (not many) (Fixes #588)
Fixed: SVT Changed again (Fixes #580)
Fixed: SVTPlay.se live channels (Again fixes #578)
Fixed: SVTPlay.se sometimes did not show all episodes (Fixes #579)
Fixed: Senaste nyhetsprogram broke in SVTPlayFixed: SVT Updated site layout and broke live channels (Fixes #578)
Fixed: SVT changed their layout a bit (Fixes #573 and the live channels)
Fixed: SVT Play Clips were not shown (Fixes #567)
Fixed: better TV4.se premium detection
Fixed: TV4Play updated their API and now use Json (Fixes #562)
Fixed: SVT changed the site and broke XOT (Fixes #554)